--- a/main.css
+++ b/main.css
@@ -125,8 +125,23 @@ div.clear {
 h2 {
   display: flex;
   justify-content: center;
-  font-size: 3em;
+  font-size: 5em;
   color: #8ad7e1;
+}
+h4 {
+  font-family: beloved;
+  font-size: 4em;
+  color: #8ad7e1;
+  margin-bottom: 1em;
+}
+h5 {
+  font-family: beloved;
+  font-size: 8em; 
+  color: black;
+  padding-bottom: 2em;
+  text-align: center;
+  margin-right: 1em;
+  
 }
 
 .projects{
@@ -151,9 +166,11 @@ input[type=text], select {
   padding: 12px 150px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #8ad7e1;;
+  border: 2px solid #8ad7e1;;
   border-radius: 4px;
   box-sizing: border-box;  
+  text-align: left;
+  margin-bottom: 2em;
   
   
 }
@@ -165,9 +182,11 @@ input[type=email], select {
   padding: 12px 150px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #8ad7e1;
+  border: 2px solid #8ad7e1;
   border-radius: 4px;
   box-sizing: border-box;
+  text-align: left;
+  margin-bottom: 2em;
   
 }
 textarea {
@@ -177,25 +196,30 @@ textarea {
   padding: 12px 150px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #8ad7e1;;
+  border: 2px solid #8ad7e1;;
   border-radius: 4px;
   box-sizing: border-box;  
+  text-align: left;
+  margin-bottom: 2em;
   
   
 }
 
 
 input[type=submit] {
-  width:20%;
+  width:45%;
   background-color:black;
   color:whitesmoke;
-  padding: 14px 100px;
+  padding: 15px 100px;
+  padding-right: 20px;
   margin: 8px 0;
-  border: 1px solid #8ad7e1;
+  margin-left: 125px;
+  border: 2px solid #8ad7e1;
   border-radius: 4px;
   cursor: pointer;
   justify-content: center;
- 
+  text-align: left;
+  margin-bottom: 2em;
 }
 input[type=submit]:hover {
   color:#02352f;
